Adicionando nome e email

--- a/AUTHORS
+++ b/AUTHORS
@@ -6,5 +6,5 @@
 
  Name						e-mail
  ------------------------------------           ----------------------
-
+Wallace Cruz de Souza				wallacecs@hotmail.com.br
 
