Testando push na Master

--- a/AUTHORS
+++ b/AUTHORS
@@ -8,4 +8,4 @@
  ------------------------------------   ------------------------
  Wallace Cruz de Souza                  wallacecs@hotmail.com.br
  Edylson Torikai                        tedylson@gmail.com
-
+ Victor Roberti Camolesi                victorrobcam@gmail.com
