Configure SQLAlchemy and database

--- a/AUTHORS
+++ b/AUTHORS
@@ -14,3 +14,5 @@
  Victor Akihito Kamada Tomita           akihito012@usp.br
  André Luís Mendes Fakhoury             andrefakhoury@usp.br
  Gustavo Vinicius Vieira Silva Soares   gsoares@usp.br
+ Leonardo Akel Daher                    leonardo.daher@usp.br
+ Angelo Ardengue Rosolen Tessaro        angeloartessaro@gmail.com
