--- a/AUTHORS
+++ b/AUTHORS
@@ -14,3 +14,4 @@
  Victor Akihito Kamada Tomita           akihito012@usp.br
  André Luís Mendes Fakhoury             andrefakhoury@usp.br
  Gustavo Vinicius Vieira Silva Soares   gsoares@usp.br
+ Lucas Fernandes Turci			lucas.turci@usp.br
