--- a/doc/README
+++ b/doc/README
@@ -26,7 +26,7 @@
 
  Directory pollex/doc/developers contains useful information for developers
  willing to contribute to the project. If this is for you, please, start
- by reading contrib.txt file.
+ by reading Contrib.md file.
 
  Copyright and licensing
  ------------------------------
